tests/fixtures/invalid/bool_subscript.py
# Bool does not support subscript operation
x: bool = True
y: bool = x[0]
